--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+New in 1.2.0 (since 1.1.0)
+--------------------------
+
+* Finer grained locks
+
 New in 1.1.0 (since 1.0.0)
 --------------------------
 
