--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ New in 1.2.0 (since 1.1.0)
 
 * Finer grained locks
 
+* NBNS / LLMNR / MDNS name resolution protocols
+
+
 New in 1.1.0 (since 1.0.0)
 --------------------------
 
