--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+New in 1.3.0 (since 1.2.0)
+--------------------------
+
+* Use guile-2
+
+* Reopen network interfaces after they go down/up
+
+
 New in 1.2.0 (since 1.1.0)
 --------------------------
 
