--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,20 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+New in 1.5.0 (since 1.4.0)
+--------------------------
+
+* Junkie can now forward traffic information to another junkie:
+
+  junkie -p serializer.so -i eth0 &
+  junkie -e '(open-deserializer)' -p some_plugin
+
+* Compiled packet filters (much faster than tshark filters):
+
+  junkie -i eth0 -p writer.so --file=/dev/stdout --method=csv \
+    --netmatch '((tcp with (dst = 80)) (http with ((set? host) && (host =s "www.google.com"))))'
+
+
 New in 1.4.0 (since 1.3.0)
 --------------------------
 
