--- a/README
+++ b/README
@@ -33,6 +33,7 @@ but we believe it can be further extended to fulfill many unforeseen purposes.
 
 .. _SecurActive: http://www.securactive.net
 
+
 Limitations
 ===========
 
@@ -72,4 +73,67 @@ most blatant limitations:
   the sniffer listens to various independent SIP proxys or servers then
   call-id collisions can not be ruled out (this choice was made because
   it proven useful in practice).
+
+
+Todo
+====
+
+Protocol discovery
+------------------
+
+Given some signatures, discover some protocols (likely targets: RT(C)P, peer 
+to peer...).
+
+Netmatch language
+-----------------
+
+- a type for signed integers (in a way or another - maybe the few operators 
+  that really care should exist in two variants?);
+- a type for byte strings (ideally a special form that build a char[] from a
+  byte string such as f1:ab:01:14:00:a7;
+- another special form for converting a name to an ip_addr;
+- a function for matching an ip with a subnet;
+- pure functions taking only constants (and thus returning a constant) should
+  be precomputed;
+- a random function;
+- a slice operator to extract a string from another string;
+- binary operators on integers (&, |, ^ and !)
+- it should be correct to match with:
+  '(eth (then ((ip with ...) or (arp with ...))))';
+- a list of every valid fields (with a docstrings) for better error messages;
+- a higher level language resembling wireshark's, with automatic insertion of
+  'set?' predicates;
+
+Conversations matching
+----------------------
+
+Given a FSM (not necessarily fully connected) which edges are labelled with 
+netmatch expressions, a plugin that tracks conversations.
+The vertices contain some rules to be executed when the vertex is entered,
+with some expression (ie possibly values from the register file) as argument.
+
+Reports
+-------
+
+A plugin to use the aforementioned FSM executable rules to build report to
+help classify traffic;
+
+Netflow
+-------
+
+Using the above report facility, produce netflow statistics (and stream it).
+
+Minor
+-----
+
+- writer www plugin must mergecap fractionned pcap files for download;
+- custom objects allocator?
+
+Parsers for:
+------------
+
+- H323
+- SCCP
+- SMB
+- MSSQL
 
