--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+New in 2.0.0 (since 1.5.0)
+--------------------------
+
+* Continuation function replaced by hooks (with a compatibility per packet hook)
+
+* Support for HTTP chunked transfert encoding
+
+
 New in 1.5.0 (since 1.4.0)
 --------------------------
 
