fix: states p0f.fp license and ownership.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,5 @@ In order of appearance :
 guillaume.leconte@gmail.com
 cedric.cellier@securactive.net
 simon.thepot@gmail.com
+lcamtuf@coredump.cx (p0f.fp)
 
