--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,10 @@ New in 2.1.0 (since 2.0.0)
 
 * Custom memory allocator that performs marginally better on large networks
 
+* Packet deduplication dynamically resize the queue (no more need for the
+  autocalibration thread)
+
+
 New in 2.0.0 (since 1.5.0)
 --------------------------
 
