--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+NEW in 2.3.0 (since 2.2.0)
+--------------------------
+
+* Packetogram plugin to display packet size distribution
+
+
 NEW in 2.2.0 (since 2.1.0)
 --------------------------
 
