--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ NEW in 2.3.0 (since 2.2.0)
 
 * Duplicogram plugin to display dups time distribution
 
-* Autodiscovery of HTTP payloads
+* Autodiscovery of some protocols (HTTP, SIP, MGCP, FTP...)
 
 
 NEW in 2.2.0 (since 2.1.0)
