--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+NEW in 2.4.0 (since 2.3.0)
+--------------------------
+
+
 NEW in 2.3.0 (since 2.2.0)
 --------------------------
 
