--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+NEW in 2.7.0 (since 2.6.0)
+--------------------------
+
+* Time has passed!
+
+
 NEW in 2.6.0 (since 2.5.0)
 --------------------------
 
