Refresh texts for new release

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ guillaume.leconte@gmail.com
 cedric.cellier@securactive.net
 simon.thepot@gmail.com
 lcamtuf@coredump.cx (p0f.fp)
-
+anthonin.bonnefoy@gmail.com
