Update some more docs and distribute dump-transactions

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 In order of appearance :
 
 guillaume.leconte@gmail.com
-cedric.cellier@securactive.net
+rixed-github@happyleptic.org
 simon.thepot@gmail.com
 lcamtuf@coredump.cx (p0f.fp)
 anthonin.bonnefoy@gmail.com
