--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 For a detailed Changelog, see git logs.
 Here are only reported the most visible changes.
 
+NEW in 2.8.1 (since 2.8.0)
+--------------------------
+
+* Fixes
+
+
 NEW in 2.8.0 (since 2.7.0)
 --------------------------
 
